button spacing fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,9 +138,16 @@ body {
 }
 
 .form-label {
-  font-size: 20px;
+  font-size: 15px;
 }
 
+#search-btn {
+  margin: 10px;
+}
+
+#remove-coins {
+  margin:10px;
+}
 
 /* label color */
 /* .input-field label {
